# magic-mouse

./: README.md  RELEASES.md
cosmic-wayland/: .gitignore  LICENSE  QUICK_INSTALL.md  README.md  SENSITIVITY_PRESETS.md  _chatgpt_write_test.tmp  install.sh  patch-control-panel-v1.4.6.py  patch-control-panel-v1.4.7.py  patch-cosmic-ws-desktop-focus-v1.4.8.py  patch-cosmic-ws-multimonitor-v1.4.8.py  patch-cosmic-ws-target-mode-v1.4.8.py  patch-mode-indicator-v1.4.8.py  patch-sensitivity-v1.4.8.py  pyproject.toml  quick-install.sh  repair-permissions.sh  reset.sh  setup-cosmic-v1.4.6.sh  setup-cosmic-v1.4.7.sh  setup-cosmic-v1.4.8-relaxed.sh  setup-cosmic-v1.4.8.sh  uninstall.sh  verify.sh
cosmic-wayland/assets/: magic-mouse-control-panel.png.b64
cosmic-wayland/desktop/: magic-mouse-control-panel  magic-mouse-control-panel.desktop
cosmic-wayland/docs/: profiles.md  troubleshooting.md
cosmic-wayland/modern-v1.5.0/: README.md  install.sh  patch-modern-ui-v1.5.0.py
cosmic-wayland/modern-v1.5.1/: README.md  install.sh  magic-mouse-control-panel-modern  patch-modern-details-v1.5.1.py  patch-modern-icon-v1.5.1.py  patch-modern-panel-v1.5.1.py  patch-modern-workspace-target-fixed-v1.5.1.py  patch-modern-workspace-target-v1.5.1.py
cosmic-wayland/profiles/: cosmic.env  gnome-ubuntu.env
cosmic-wayland/releases/: README.md
cosmic-wayland/scripts/: calibrate.sh  check.sh  diagnose.sh  fix-permissions-now.sh  list-hidraw.sh  test-hidraw-open.sh
cosmic-wayland/src/: control_panel.py  desktop_detect.py  keysend.py  magic_mouse_daemon.py
gnome-ubuntu/: README.md  (+3 more)
(+17 files in other folders)
